# copypp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  batch.py
.github/workflows/: cmake-multi-platform.yml
cmake/: copyppConfig.cmake
include/icurve/: copypp.hh  copypp_only.hh  meta.hh
test/: A.h  B.h  CMakeLists.txt  copypp_array_test.cpp  copypp_only_test.cpp  copypp_stl_test.cpp  copypp_test.cpp  copypp_test2.cpp  copypp_test3.cpp  copypp_test4.cpp
